fixed guide issues on mobile where scrolling was broken due to fixed locations

--- a/wp-content/themes/wp-reddoor/static/styles/src/guide.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/guide.less
@@ -235,3 +235,14 @@ body.post-type-archive-rdc_guide, body.tax-rdc_guide_category, body.single-rdc_g
 
 }
 
+// Smal Screen Support for Guides, we fix nothing and allow for regular scrolling.
+@media (max-width: 1200px) {
+
+  .guide-wrapper {
+    position: initial !important;
+  }
+
+  .guide-article-wrapper {
+    overflow: visible !important;
+  }
+}
